# MOVIE_2024_VolumetricVideo

code/viewer/: CMakeLists.txt  install  readme  run.sh
code/viewer/src/: CMakeLists.txt  Namespace.h  main.cpp
code/viewer/src/Core/: Camera.cpp  Camera.h  Imgui.cpp  Imgui.h  Namespace.h  Opengl.cpp  Opengl.h
code/viewer/src/Realsense/: Capture.cpp  Capture.h  GUI.cpp  GUI.h  Namespace.h  Playback.cpp  Playback.h
doc/: git  project
